--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <body>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type='text/javascript' src='bower_components/pixi.js/bin/pixi.js'></script>
+    <script type='text/javascript' src='src/board.js'></script>
+    <script type='text/javascript' src='src/card.js'></script>
     <script type='text/javascript' src='src/app.js'></script>
   </body>
 </html>
