--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
     <script type='text/javascript' src='bower_components/pixi.js/bin/pixi.js'></script>
     <script type='text/javascript' src='src/board.js'></script>
     <script type='text/javascript' src='src/card.js'></script>
